<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/bottom_map" />
    <item
        android:id="@+id/bottom_list"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/bottom_list" />
    <item
        android:id="@+id/bottom_workmates"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/bottom_workmates" />
</menu>